--- a/TelaLogin/resource.rc
+++ b/TelaLogin/resource.rc
@@ -19,12 +19,12 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "Dialog"
 FONT 8, "Ms Shell Dlg"
 {
+    EDITTEXT        Senha_1, 129, 76, 149, 17, ES_PASSWORD, WS_EX_LEFT
     PUSHBUTTON      "Enviar", Ok_1, 160, 111, 65, 23, 0, WS_EX_LEFT
     RTEXT           "Login:", 0, 89, 57, 31, 13, SS_RIGHT, WS_EX_LEFT
     RTEXT           "Senha:", 0, 99, 80, 24, 9, SS_RIGHT, WS_EX_LEFT
     CTEXT           "Tela de Login em c++ utilizando Code Blocks e ResEdit", 0, 103, 26, 176, 9, SS_CENTER, WS_EX_LEFT
     EDITTEXT        Login_1, 129, 52, 150, 17, ES_AUTOHSCROLL, WS_EX_LEFT
-    EDITTEXT        Senha_1, 130, 76, 149, 17, ES_AUTOHSCROLL, WS_EX_LEFT
 }
 
 
